--- a/_notebooks/2022-04-02-DRL.ipynb
+++ b/_notebooks/2022-04-02-DRL.ipynb
@@ -591,6 +591,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98f8c795-ef89-4267-8dee-9dc6fd4ca680",
+   "metadata": {},
+   "source": [
+    "**입실론 그리디 전략과 입실론 그리디 감가전략이 가장 많이 쓰이는 탐색 전략, 잘 동작하면서도 내부 구조가 단순하다는 이유로 선호받는다.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d999511-3cbe-42d9-be3c-1e6835bebdcd",
    "metadata": {},
    "source": [
@@ -635,50 +643,81 @@
    "metadata": {},
    "source": [
     "*입실론-그리디 감가 전략 decaying epsilon-greedy strategy*\n",
-    "- 처음에는 입실론을 1보다 작거나 같은 매우 큰 값으로 시작하고, 매 타임 스텝마다 그 값을 감가시키는 것"
+    "- 처음에는 입실론을 1보다 작거나 같은 매우 큰 값으로 시작하고, 매 타임 스텝마다 그 값을 감가시키는 것\n",
+    "    - 선형적으로 감가\n",
+    "    - 기하급수적으로 감가"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "bc417af7-9f57-450c-baa6-44c3acacb153",
    "metadata": {},
-   "source": []
+   "source": [
+    "*낙관적 초기화 전략optimistic initialization* = 불확실성에 맞닿은 낙관성optimosm in the face of uncertainty\n",
+    "- Q함수를 낙관적인 값인 높은 값으로 초기화함으로써 탐색되지 않은 행동에 대한 탐색을 할 수 있게 도와줘서\n",
+    "- 에이전트는 환경과 상호작용 하면서 추정치는 낮은 값으로 수렴하기 시작하고\n",
+    "- 정확해진 추정치는 에이전트가 실제로 높은 보상을 받을 수 있는 행동을 찾고 수렴할 수 있게 해준다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "3b849895-edbc-48da-948b-a1b69fd20b30",
    "metadata": {},
-   "source": []
+   "source": [
+    "*소프트맥스 전략 softmax strategy*\n",
+    "- 행동-가치 함수에 기반한 확률 분포로부터 행동을 샘플링하는데, 이 때 행동을 선택하는 확률은 행동-가치 추정에 비례하도록 한다.\n",
+    "- Q 함수에 대한 선호도를 매기고, 이 선호도를 기반한 확률 분포에서 행동을 샘플링하면 된다.\n",
+    "- Q값의 추정치 차이는 높은 추정치를 가지는 행동은 자주 선택하고, 낮은 추정치를 가지는 행동을 덜 선택하는 경향을 만든다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "64eb4c98-8f80-48b4-ab36-aa5308b3a563",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\pi(a) = \\frac{exp\\big( \\frac{Q(a)}{\\tau} \\big) }{ \\sum^{B}_{b=0} exp \\big( \\frac{Q(b)}{\\tau} \\big) }$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7dfc5ce7-1d9f-481a-9834-01516246aa05",
    "metadata": {},
-   "source": []
+   "source": [
+    "- $\\tau$는 온도 계수,\n",
+    "- $Q$값을 $\\tau$로 나눠즈면 행동을 선택하는 선호도가 계산된다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ca1e1b7d-decb-4298-b927-3e92198d9933",
    "metadata": {},
-   "source": []
+   "source": [
+    "*신뢰 상한 전략upper confidence bound. UCB*\n",
+    "- 낙관적 초기화 원칙은 그대로 유지하되, 불확실성을 추정하는 값을 계산하는데 통계적인 기법을 사용하고, 이를 탐색할 떄 일종의 보너스로 사용하늗 것"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cab28b6d-4dc8-41af-931e-5cfb7352c068",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$A_e = argmax_a \\big[ Q_e(a) + c\\sqrt{\\frac{\\ln e}{N_e(a)}} \\big]$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "2bd9a36b-9092-4fcb-973b-a7378e76d2de",
    "metadata": {},
-   "source": []
+   "source": [
+    "*톰슨 샘플링 전략 thormpson sampling*\n",
+    "- 탐색과 착위 사이에서 균형을 잡는데, 베이지안 기법을 사용한 샘플링 기반 확류탐색 전략\n",
+    "- 책의 예시에서는 Q 값을 하나의 가우시안 분포로 고려하여 구현한다.\n",
+    "    - 평균을 기준으로 대칭을 이루고, 가르치는 목적에 적합할만큼 간단하기 때문\n",
+    "    - 다른 분포도 사용될 수 있다.\n",
+    "    - 가우시안 분포를 사용하는 이유\n",
+    "        - 가우시안 평균이 Q값의 추정치이고, 가우시안 표준편차는 추정치에 대한 불확실성을 나타내는데 이 값은 매 에피소드마다 업데이트 된다.\n",
+    "- 하지만 베타 분포를 더 많이 쓰이는 것처럼 보인다."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -686,6 +725,98 @@
    "metadata": {},
    "source": [
     "### 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ddfd95-76cf-4712-be7f-b5f3e8f52d16",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fe53ad1-2416-4874-8266-dabf81855471",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "161b3bb7-33d5-40a8-861c-bb44e32caa88",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b160a7-885c-443f-8c89-65662412c393",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5276fa57-38ab-444b-ac27-0cca09295ccd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5601f7a-5409-4ecf-bbbb-5612b1d61225",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10699b07-e934-4e7b-8dc4-034ca42fff0f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "956ae105-fb66-4654-8c20-501c038df99b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2182737b-7601-4403-b33f-3a29caf31921",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fcb2fb5-868c-4b42-9b8c-fb1eb783c071",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bb5a245-fad9-42d1-95a1-2eb850902776",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc0e5bd-1d78-4d24-85b1-12035fc7e4be",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0adee5bc-a22b-438f-88af-f432245bbb10",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913e112e-4a1c-4ab7-8faa-93a5a40417a9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792ffb44-4cd4-4aaa-8404-13ca56bc7e14",
+   "metadata": {},
+   "source": [
+    "### 6"
    ]
   }
  ],
