--- a/_notebooks/2022-04-03-Earthquake-Copy2.ipynb
+++ b/_notebooks/2022-04-03-Earthquake-Copy2.ipynb
@@ -116,7 +116,7 @@
     "tags": []
    },
    "source": [
-    "##### 3. Definition of Distiance at non-Euclidian space using Haversine Fomula"
+    "##### 3. Haversine Fomula 사용한 거리 정의"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "id": "16292bd0-c0b1-414c-961d-a14aef400748",
    "metadata": {},
    "source": [
-    "##### 7. Eigenvalue Decomposition\n",
+    "##### 7. Eigendecomposition\n",
     "- ${\\bf L} = {\\boldsymbol\\Psi} {\\boldsymbol\\Lambda} {\\boldsymbol\\Psi}^\\top$"
    ]
   },
@@ -281,12 +281,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0f1c48a-ba26-4307-a515-00c74e15e9e0",
+   "metadata": {},
+   "source": [
+    "##### 8. Principal components Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3c2eee04-2d19-457c-a4f9-3e4956d48a25",
    "metadata": {
     "tags": []
    },
    "source": [
-    "##### 8. Singular Value Decomposition\n",
     "- $comp_k = f @ np.outer(Ψ[:,k], Ψ[:,k]) $\n",
     "    - $k = 1, 2, 3, n$\n",
     "- $p = \\sum_{1}^{n} comp_{1}^{2},\\sum_{1}^{n} comp_{2}^{2},…,\\sum_{1}^{n} comp_{n}^{2}$\n",
@@ -315,14 +322,6 @@
     "varprop = array_1/array_1.sum()\n",
     "_index = pd.DataFrame({'index':range(1,len(_df)),'varprop':varprop}).sort_values('varprop',ascending=False)\n",
     "_indexlst = _index.iloc[:25,0].tolist()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e0f1c48a-ba26-4307-a515-00c74e15e9e0",
-   "metadata": {},
-   "source": [
-    "##### 9. Principal components Analysis"
    ]
   },
   {
