--- a/_notebooks/2022-04-03-Earthquake-Copy2.ipynb
+++ b/_notebooks/2022-04-03-Earthquake-Copy2.ipynb
@@ -182,7 +182,7 @@
    "id": "d9deb546-963d-480e-97fe-efc1811cb75c",
    "metadata": {},
    "source": [
-    "$$W_{u_r,v_sj}=\\begin{cases} {W_{u,v}} & \\quad \\text{ if }  u,v \\in V_t  \\\\ W_{u,v} \\odot \\beta  & \\quad \\text{if }u=v \\text{ and } r=s-1 \\\\ 0 & \\quad \\text{otherwise} \\end{cases}$$"
+    "$$W_{u_r,v_s}=\\begin{cases} {W_{u,v}} & \\quad \\text{ if }  u,v \\in V_t  \\\\ W_{u,v} \\odot \\beta  & \\quad \\text{if }u=v \\text{ and } r=s-1 \\\\ 0 & \\quad \\text{otherwise} \\end{cases}$$"
    ]
   },
   {
