--- a/_notebooks/2022-04-05-Earthquake-Copy2.ipynb
+++ b/_notebooks/2022-04-05-Earthquake-Copy2.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 248,
    "id": "dffe4b90-9fee-47c2-a6fe-0e4cb78ccc16",
    "metadata": {},
    "outputs": [],
@@ -101,12 +101,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 249,
    "id": "42cb0eb4-ebd6-4f18-9aaf-ba240928e361",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "f = (f_true-f_true.mean())/f_true.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "4314c9f1-db53-4289-acd8-cdcb2d562e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4515.999999999998"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f@f ## SST "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "a5b724f9-8232-45b8-aceb-9f96fe4bf35a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4515.999999999998"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f-np.mean(f))@(f-np.mean(f)) ## SSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "8e87eb64-013e-46e8-bb3f-1d5255570cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.788340861072209e-29"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f*0-np.mean(f))@(f*0-np.mean(f)) ## SSH"
    ]
   },
   {
@@ -302,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 415,
    "id": "e25ddaa9-981e-4017-846d-ef5cb7155f9b",
    "metadata": {},
    "outputs": [],
@@ -313,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 416,
    "id": "9a9d1d21-c683-4286-9f3d-f15971b74ed4",
    "metadata": {},
    "outputs": [],
@@ -326,7 +391,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 494,
+   "id": "a11e3c96-599c-4914-9d16-0f119555f6e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.52276772+0.j, 0.61006958+0.j, 1.06829524+0.j, ...,\n",
+       "       0.01180676+0.j, 0.2273058 +0.j, 0.22628734+0.j])"
+      ]
+     },
+     "execution_count": 494,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
    "id": "72ec41f0-2a2d-45b5-88f4-c94b44328bd1",
    "metadata": {},
    "outputs": [],
@@ -352,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 418,
    "id": "a1c610b6-2c6d-4108-ad30-8b4cafc30b72",
    "metadata": {},
    "outputs": [],
@@ -364,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 419,
    "id": "14551652-eec8-4f9f-83c7-6d0bd8799bdf",
    "metadata": {},
    "outputs": [
@@ -393,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 420,
    "id": "3786a073-e349-4e96-9ccf-6b5d05caf5a4",
    "metadata": {
     "tags": []
@@ -424,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 421,
    "id": "dd95e4a7-2666-487d-a648-c59bc7e37b4d",
    "metadata": {
     "tags": []
@@ -455,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 422,
    "id": "646d7f5a-9e37-4f07-b7d9-0cb3280c2bf2",
    "metadata": {
     "tags": []
@@ -486,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 423,
    "id": "5427aaca-fe90-4343-aeb7-e5b18ab7e379",
    "metadata": {
     "tags": []
@@ -517,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 424,
    "id": "f1024e29-d637-45c5-a79b-308f0fc743eb",
    "metadata": {
     "tags": []
@@ -548,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 425,
    "id": "579ccb46-2930-4df8-bf82-c3dd14d4e63a",
    "metadata": {
     "tags": []
@@ -589,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 426,
    "id": "fff150b3-fba3-4e44-af03-f4dfb24f75c5",
    "metadata": {},
    "outputs": [],
@@ -601,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 427,
    "id": "02911df7-2294-4d31-a266-92a77ac59719",
    "metadata": {},
    "outputs": [
@@ -630,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 428,
    "id": "cba16e0d-780a-4eed-8d22-dad13382d59a",
    "metadata": {
     "tags": []
@@ -661,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 429,
    "id": "a93a2640-5292-4fe5-8961-59d1e7b81464",
    "metadata": {
     "tags": []
@@ -692,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 430,
    "id": "eb3e0e0b-37e2-4d94-aaa7-9dd6e589dd67",
    "metadata": {
     "tags": []
@@ -723,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 431,
    "id": "d444fa90-99fa-49ab-877e-be3e8efc783f",
    "metadata": {
     "tags": []
@@ -754,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 432,
    "id": "99437b06-fc02-41fb-8e4e-8047066be78f",
    "metadata": {
     "tags": []
@@ -785,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 433,
    "id": "b0bffcbf-c31f-46df-bf60-a1435c4af0db",
    "metadata": {
     "tags": []
@@ -826,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 434,
    "id": "6056deef-f1da-4495-890a-2b0583f2be24",
    "metadata": {},
    "outputs": [],
@@ -838,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 435,
    "id": "3afd03c5-5dfd-47b2-b5d3-79b3f25522cb",
    "metadata": {},
    "outputs": [
@@ -867,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 436,
    "id": "54c99568-6686-46e1-b81d-2e1d05549fda",
    "metadata": {
     "tags": []
@@ -898,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 437,
    "id": "ccdc58b4-d454-408a-8159-1f23573d20a4",
    "metadata": {
     "tags": []
@@ -929,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 438,
    "id": "2f62a01f-421f-4070-a0b3-5a23aa3c750b",
    "metadata": {
     "tags": []
@@ -960,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 439,
    "id": "6881087c-2a73-4746-8578-ef35f60b0128",
    "metadata": {
     "tags": []
@@ -991,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 440,
    "id": "b49ca238-f07b-4c00-a3ed-f5e0adfa8e9f",
    "metadata": {
     "tags": []
@@ -1022,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 441,
    "id": "bf0f68e6-6d33-4eba-8f8d-ed72a527acf6",
    "metadata": {
     "tags": []
@@ -1063,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 442,
    "id": "434e88ef-29bd-41ef-9063-06f3ab59812d",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 443,
    "id": "be96ee82-e682-4422-b771-f8d2779e508d",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 444,
    "id": "b7c4340f-e62d-49c9-9cfd-b20073f15be5",
    "metadata": {
     "tags": []
@@ -1135,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 445,
    "id": "b4526f34-1bff-4313-91d8-96e386c17c23",
    "metadata": {
     "tags": []
@@ -1166,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 446,
    "id": "ac7da1a3-e3ec-4f6e-99dd-0e7a56085517",
    "metadata": {
     "tags": []
@@ -1197,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 447,
    "id": "6a191ae8-963b-4ae8-bfe8-91af62fdb6d4",
    "metadata": {
     "tags": []
@@ -1228,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 448,
    "id": "fb26e907-d8e1-4228-abf3-fe12ddceb86f",
    "metadata": {
     "tags": []
@@ -1259,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 449,
    "id": "a146d4db-4b05-49fd-8d8b-0b7a186f9fc5",
    "metadata": {
     "tags": []
@@ -1300,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 450,
    "id": "533fba73-b2c8-4bf2-8a66-f09c8bae6e6f",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 451,
    "id": "21e38668-cbd2-4ba2-97b2-b60581f21468",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 452,
    "id": "dbd5c7c6-c66c-4d07-aae3-f72f9dc9cb1b",
    "metadata": {
     "tags": []
@@ -1372,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 453,
    "id": "1ad4c034-a870-4951-9a00-d5bf7b66725d",
    "metadata": {
     "tags": []
@@ -1403,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 454,
    "id": "130fe0d9-5098-4697-b91c-b9a42f071c3f",
    "metadata": {
     "tags": []
@@ -1434,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 455,
    "id": "4dfd6130-068d-400b-b225-cc9c1d6d8de7",
    "metadata": {
     "tags": []
@@ -1465,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 456,
    "id": "98d66c6b-0107-4c31-89ff-1ff817dc9a37",
    "metadata": {
     "tags": []
@@ -1496,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 457,
    "id": "adb796b7-24e2-48a8-8150-a838f0c92cc7",
    "metadata": {
     "tags": []
@@ -1537,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 458,
    "id": "ae5e420d-a4ff-492e-8f59-846ca0b0ba63",
    "metadata": {},
    "outputs": [],
@@ -1549,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 459,
    "id": "69f9237e-50fb-4d7c-8d28-d119a86fd32b",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 460,
    "id": "f0036f36-f770-4690-b4fc-370c36f3856c",
    "metadata": {
     "tags": []
@@ -1609,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 461,
    "id": "419a33d4-1c82-4c7c-9aba-66be8e2dee72",
    "metadata": {
     "tags": []
@@ -1640,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 462,
    "id": "226209c3-39b8-4c90-8606-47e3f6817e60",
    "metadata": {
     "tags": []
@@ -1671,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 463,
    "id": "b4283aa8-f1f9-4c93-a343-3f1275feb4e1",
    "metadata": {
     "tags": []
@@ -1702,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 464,
    "id": "ad012f49-3367-4794-b84f-1a67defba267",
    "metadata": {
     "tags": []
@@ -1733,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 465,
    "id": "fbf4e86f-e87e-4899-a418-061963c243dc",
    "metadata": {
     "tags": []
@@ -1774,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 466,
    "id": "b74dc586-41fe-41a8-a656-1c8f485200b2",
    "metadata": {},
    "outputs": [],
@@ -1786,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 467,
    "id": "232aaba2-0c1a-4792-9cf6-1b0e62e9431e",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 468,
    "id": "f5f6d4c5-d164-4fc4-99e5-5e6de0447b09",
    "metadata": {
     "tags": []
@@ -1846,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 469,
    "id": "81bed9aa-b744-433f-8f5a-6802707db258",
    "metadata": {
     "tags": []
@@ -1877,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 470,
    "id": "552b4f1e-80a4-4d3a-aa21-ef84052f2396",
    "metadata": {
     "tags": []
@@ -1908,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 471,
    "id": "3082565e-59aa-4d8d-8769-c498a830f5cd",
    "metadata": {
     "tags": []
@@ -1939,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 472,
    "id": "bc9327e5-8233-490e-8420-3cafb5168773",
    "metadata": {
     "tags": []
@@ -1970,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 473,
    "id": "576e9280-f209-47a2-999f-147948fd47df",
    "metadata": {
     "tags": []
@@ -2011,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 474,
    "id": "6f7daeac-c574-4530-b73b-4730a5286997",
    "metadata": {},
    "outputs": [],
@@ -2023,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 475,
    "id": "cee1f519-ce04-4c33-bdab-d3e7d5e837d6",
    "metadata": {},
    "outputs": [
@@ -2052,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 476,
    "id": "8f75f238-0944-423c-86ba-987a0030a3ff",
    "metadata": {
     "tags": []
@@ -2083,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 477,
    "id": "58ce17bc-1340-4ce4-8c2b-6e5b8ae3645f",
    "metadata": {
     "tags": []
@@ -2114,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 478,
    "id": "f73852e6-1bc5-4d61-8e1e-40e83bc83553",
    "metadata": {
     "tags": []
@@ -2145,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 479,
    "id": "6c84791b-ef29-4cac-83fc-0b594bf4e93d",
    "metadata": {
     "tags": []
@@ -2176,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 480,
    "id": "89d18a90-0fb1-4401-be6e-ee2af274aab3",
    "metadata": {
     "tags": []
@@ -2207,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 481,
    "id": "d54ac1c2-6c45-4476-a3bf-8f253361ea59",
    "metadata": {
     "tags": []
