--- a/_notebooks/2022-04-06-Earthquake(guebin).ipynb
+++ b/_notebooks/2022-04-06-Earthquake(guebin).ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# Earthquake_standardization\n",
+    "# Earthquake_standardization (guebin)\n",
     "> Non-Euclidean geometry\n",
     "\n",
     "- toc:true\n",
@@ -18,6 +18,14 @@
     "- author: 최서연\n",
     "- categories: [Graph Laplacian, PCA, eigendecomposition]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e01a0958-b82e-416e-a102-2218715e3942",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
