--- a/_notebooks/2022-04-06-bds_5주차.ipynb
+++ b/_notebooks/2022-04-06-bds_5주차.ipynb
@@ -1972,14 +1972,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3d2792-b02b-46f9-8f2b-194479c26842",
-   "metadata": {},
-   "source": [
-    "# 여기부터 다시 복습 시작"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "febc6310-7669-4cfe-ba5f-70ae1853f605",
    "metadata": {
     "id": "febc6310-7669-4cfe-ba5f-70ae1853f605"
@@ -2015,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 449,
    "id": "37fc8f95-2e95-46cb-8d93-6497e67f6df7",
    "metadata": {},
    "outputs": [
@@ -2025,7 +2017,7 @@
        "(TensorShape([200, 2]), TensorShape([200, 1]))"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 450,
    "id": "9a81ba90-9737-4b12-a979-b3d3292aedc9",
    "metadata": {},
    "outputs": [
@@ -2049,7 +2041,7 @@
        "       [10.]])>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2603,7 +2595,8 @@
    "cell_type": "markdown",
    "id": "a1f09a4f-bdb9-440b-9d9e-623cd220baff",
    "metadata": {
-    "id": "a1f09a4f-bdb9-440b-9d9e-623cd220baff"
+    "id": "a1f09a4f-bdb9-440b-9d9e-623cd220baff",
+    "tags": []
    },
    "source": [
     "#### 풀이3: 벡터버전, 사용자정의 (짧은) 손실함수 "
@@ -3552,7 +3545,9 @@
    "cell_type": "code",
    "execution_count": 272,
    "id": "6dfa6b99-a742-48dd-9912-89a61c6f68ca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for epoc in range(1000):\n",
@@ -3922,7 +3917,8 @@
    "id": "5ee81bb1-ba54-4966-8365-25680d5127a8",
    "metadata": {},
    "source": [
-    "`-` 레이어: 입력 -> 레이어1 -> 출력/입력 -> 레이어2 -> ... 가능"
+    "`-` 레이어: 입력 -> 레이어1 -> 출력/입력 -> 레이어2 -> ... \n",
+    "- 이렇게 이어서 가능~"
    ]
   },
   {
@@ -3941,7 +3937,7 @@
    "source": [
     "`-` 네트워크: 레이어들의 집합\n",
     "- 네트워크를 설계한다 ? -> 레이어를 설계한다.\n",
-    "- x를 입력으로 해서 y_hat를 설계한다 -> y_hat의 아키텍쳐를 설계한다."
+    "- $x$를 입력으로 해서 $\\hat{y}$를 설계한다 -> $\\hat{y}$의 아키텍쳐를 설계한다."
    ]
   },
   {
@@ -4603,6 +4599,14 @@
    "metadata": {},
    "source": [
     "잘 학습된 모습"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb6b9e6b-5be5-4d19-a169-ace6521a3fc5",
+   "metadata": {},
+   "source": [
+    "# verbose 복습,,뭐였지.."
    ]
   }
  ],
