--- a/_notebooks/2022-04-03-DRL.ipynb
+++ b/_notebooks/2022-04-03-DRL.ipynb
@@ -818,6 +818,168 @@
    "source": [
     "### 6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e351b31-f811-4b03-abe1-7ade03f9582a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790bca37-dfdf-4174-a1ee-86f5e457ad7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae8597c-0a3d-4d49-a192-b768fd18f514",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ee6503e-0c74-4aff-82cb-3874e2076a76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e67033ca-61e4-4b1a-b39e-540981ebba69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5b7c2d6-569c-496b-a5e4-174fff2e402f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "725c3b16-b941-43c0-af9a-215022229daa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e692b5de-083e-4c05-84e8-018eba55f8fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6db7592e-a2d5-4c0b-be41-94ebf29daefa",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b4287f-7ce2-40ce-853d-b9674f749b76",
+   "metadata": {},
+   "source": [
+    "$19.$ 확률변수 X의 확률밀도함수가 $f_X(x) = 2x, 0<x<1$ 일 때\n",
+    "\n",
+    "(1) $Y = 3X + 2$의 확률밀도함수를 구하라.\n",
+    "\n",
+    "(2) $Y = X^2$의 확률밀도함수를 구하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee2b6656-a13d-4051-ab29-35e48a4bd1d4",
+   "metadata": {},
+   "source": [
+    "$20.$ 확률변수 $X$의 확률밀도함수가 $f_X(x) = 3e^{-3x}, x>0$ 일 때\n",
+    "\n",
+    "(1) $Y = 2X + 5$의 확률밀도함수와 확률분포함수를 구하라\n",
+    "\n",
+    "(2) $Y = \\frac{1}{X}$의 확률밀도함수와 확률분포함수를 구하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c5a0a02-6fe8-4304-8b42-5c1e62632df7",
+   "metadata": {},
+   "source": [
+    "$42.$ $X = B(n,p)$일 때 $Y = n - X$의 분포를 구하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32cda7a1-5c3a-4a2f-a80a-b39b37684ce0",
+   "metadata": {},
+   "source": [
+    "$46.$ $X$ ~ $POI({\\lambda})$일 때 $E(1+X)^2$을 계산하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c8ea7b-0103-4a4a-9d40-fb2c1517b434",
+   "metadata": {},
+   "source": [
+    "$52.$ 어느 전자제품의 수명이 확률변수 $X$ ~ $EXP(100)$라고 할 때,\n",
+    "\n",
+    "(1) $P(X>30)$을 구하라.\n",
+    "\n",
+    "(2) $P(X>100)$을 구하라.\n",
+    "\n",
+    "(3) $P(X>100|X>80)$을 구하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5b8b253-c82a-4ae0-b92d-5ff535bf394d",
+   "metadata": {},
+   "source": [
+    "$54.$ $X$ ~ $N(\\mu. \\sigma^2)$일 때,\n",
+    "\n",
+    "(1) $Y = |X- \\mu |$의 확률밀도함수를 구하라.\n",
+    "\n",
+    "(2) $Y = exp(X)$의 확률밀도함수를 구하라. (이를 로그 정규확률밀도함수라고 한다.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7299e3-6ea5-4701-823a-d922e34299af",
+   "metadata": {},
+   "source": [
+    "$65.$ 확률변수들 $X_i (i = 1,2, \\dots , k)$는 서로 독립이며 $B(n,p)$분포를 따른다고 하자,\n",
+    "\n",
+    "이때 $\\sum^{k}_{i=1}X_i$의 적률생성함수를 구하고 그의 분포가 $B(nk,p)$임을 보여라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a33aae3a-0862-4f43-97a9-1e4155c216ae",
+   "metadata": {},
+   "source": [
+    "$68.$ 확률변수 $X$가 $GAM(k,\\theta)$를 따르면 임의의 상수 $c$에 대해 $cX$는 $GAM(k,c\\theta)$를 따름을 보여라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab6fb48-b80b-4687-a30b-b315e615328e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
