--- a/_notebooks/2022-03-22-bds_3주차.ipynb
+++ b/_notebooks/2022-03-22-bds_3주차.ipynb
@@ -924,6 +924,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "afc3f8e8-8fbf-4147-a4d5-a05ba977283f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 77, -88]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " np.array([77,-88]).reshape(1,2) @ np.array([[1,0],[0,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "id": "a574259f-09e6-4dfb-8a27-9adbdc26d609",
    "metadata": {},
