--- a/_notebooks/2022-04-17-ts-3장과제.ipynb
+++ b/_notebooks/2022-04-17-ts-3장과제.ipynb
@@ -120,6 +120,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7be0c397-e1d8-401c-b4b8-65b72bbb7f6d",
+   "metadata": {},
+   "source": [
+    "위에가 아니라 아래가 답!,\n",
+    "- $E(\\frac{1}{5}\\sum^{5}_{i=1}X^{2}_{i}) = \\frac{1}{5} \\times 5 = 1$\n",
+    "- $var(\\frac{1}{5}\\sum^{5}_{i=1}X^{2}_{i}) = \\frac{\\sigma^2}{n} = \\frac{10}{5} = 2$\n",
+    "- $\\therefore \\frac{1}{5} \\sum^{5}_{i=1} \\sim \\chi^{2}_{1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b540a188-a07c-45f1-8529-b6e31a8e80eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.70554345409542"
+      ],
+      "text/latex": [
+       "2.70554345409542"
+      ],
+      "text/markdown": [
+       "2.70554345409542"
+      ],
+      "text/plain": [
+       "[1] 2.705543"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qchisq(0.9,df=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5fc235c-9f5d-43eb-bee5-777e6faecb4a",
    "metadata": {},
    "source": [
@@ -345,7 +385,7 @@
     "\n",
     "(2) $P(X_1 + X_2 < 2)$ 을 계산하라.\n",
     "\n",
-    "(3) $P(X^{2}_{1} + \\dots + X^{2}_{50} < 60))$ 을 계산하라.\n",
+    "(3) $P(X^{2}_{1} + \\dots + X^{2}_{50} < 60)$ 을 계산하라.\n",
     "\n",
     "(4) $P(40 < X^{2}_{1} + \\dots + X^{2}_{50} < 60)$ 을 계산하라.\n",
     "\n",
@@ -383,7 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "id": "90648533-594b-4de5-8081-68ef875acf49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.921350396474857"
+      ],
+      "text/latex": [
+       "0.921350396474857"
+      ],
+      "text/markdown": [
+       "0.921350396474857"
+      ],
+      "text/plain": [
+       "[1] 0.9213504"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pnorm(sqrt(2),0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "f6a396d3-6698-4f62-b206-eefb82d334f1",
    "metadata": {},
    "outputs": [
@@ -441,23 +510,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "e90c1869-7afb-4d1b-a5db-0d39b8a6a20a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "63.1671210057263"
+       "13.1671210057263"
       ],
       "text/latex": [
-       "63.1671210057263"
+       "13.1671210057263"
       ],
       "text/markdown": [
-       "63.1671210057263"
+       "13.1671210057263"
       ],
       "text/plain": [
-       "[1] 63.16712"
+       "[1] 13.16712"
       ]
      },
      "metadata": {},
@@ -465,7 +534,7 @@
     }
    ],
    "source": [
-    "qchisq(0.9,df=50)"
+    "qchisq(0.9,df=50)-50"
    ]
   }
  ],
