--- a/_notebooks/2022-04-09-bds_5주차.ipynb
+++ b/_notebooks/2022-04-09-bds_5주차.ipynb
@@ -14,7 +14,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [Special Topics in Big Data Analysis, TensorFlow, TensorFlow NumPy]"
+    "- categories: [Special Topics in Big Data Analysis]"
    ]
   },
   {
