--- a/_notebooks/2022-04-21-bds-mid-prac.ipynb
+++ b/_notebooks/2022-04-21-bds-mid-prac.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "edfad276-b67d-4036-8671-a5e640aea97d",
    "metadata": {
     "id": "4205a323-41bd-447a-a737-4a77a15d4be8"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "2e7523b9-7ce8-4d8b-8f6b-9d12ce1e66d8",
    "metadata": {
     "id": "b9491bb4-1f1a-4763-b0b6-977b47413732"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 18,
    "id": "6d3ead71-47f3-4f90-bb21-309a4cbfedf9",
    "metadata": {},
    "outputs": [],
@@ -84,37 +84,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "id": "3c2606f5-db43-4c29-8a3a-02af891f46d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x = tf.concat([tf.ones(5,dtype=tf.float64).reshape(5,1),x.reshape(5,1)],axis=1)\n",
-    "_y = y.reshape(5,1) "
+    "X = tf.concat([tf.ones(5,dtype=tf.float64).reshape(5,1),x.reshape(5,1)],axis=1)\n",
+    "y = y.reshape(5,1) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "bbee7d36-8749-4959-9789-6c1a3b7a86ca",
+   "execution_count": 20,
+   "id": "b5e17a2a-b23b-4dec-812b-a536adebf8f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2, 1), dtype=float64, numpy=\n",
-       "array([[-2.49],\n",
-       "       [ 1.81]])>"
+       "<tf.Tensor: shape=(5, 2), dtype=float64, numpy=\n",
+       "array([[ 1., 11.],\n",
+       "       [ 1., 12.],\n",
+       "       [ 1., 13.],\n",
+       "       [ 1., 14.],\n",
+       "       [ 1., 15.]])>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "beta = np.linalg.inv(_x.T @ _x) @ _x.T @ _y\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "403ebde1-e196-4267-a860-cc198430fa2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 5), dtype=float64, numpy=\n",
+       "array([[ 1.,  1.,  1.,  1.,  1.],\n",
+       "       [11., 12., 13., 14., 15.]])>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bbee7d36-8749-4959-9789-6c1a3b7a86ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-21 05:43:26.070060: E tensorflow/stream_executor/cuda/cuda_blas.cc:226] failed to create cublas handle: CUBLAS_STATUS_NOT_INITIALIZED\n",
+      "2022-04-21 05:43:26.070136: W tensorflow/core/framework/op_kernel.cc:1745] OP_REQUIRES failed at matmul_op_impl.h:438 : INTERNAL: Attempting to perform BLAS operation using StreamExecutor without BLAS support\n"
+     ]
+    },
+    {
+     "ename": "InternalError",
+     "evalue": "Attempting to perform BLAS operation using StreamExecutor without BLAS support [Op:MatMul]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInternalError\u001b[0m                             Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m beta \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(\u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m) \u001b[38;5;241m@\u001b[39m X\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m y\n\u001b[1;32m      2\u001b[0m beta\n",
+      "File \u001b[0;32m~/anaconda3/envs/stbda2022/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/anaconda3/envs/stbda2022/lib/python3.10/site-packages/tensorflow/python/framework/ops.py:7107\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   7105\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   7106\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 7107\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
+      "\u001b[0;31mInternalError\u001b[0m: Attempting to perform BLAS operation using StreamExecutor without BLAS support [Op:MatMul]"
+     ]
+    }
+   ],
+   "source": [
+    "beta = tf.linalg.inv(X.T @ X) @ X.T @ y\n",
     "beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "60d65d64-2333-4e44-b315-7fcc03d4af0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-21 05:43:26.255258: E tensorflow/stream_executor/cuda/cuda_blas.cc:226] failed to create cublas handle: CUBLAS_STATUS_NOT_INITIALIZED\n",
+      "2022-04-21 05:43:26.255310: W tensorflow/stream_executor/stream.cc:1260] attempting to perform BLAS operation using StreamExecutor without BLAS support\n"
+     ]
+    },
+    {
+     "ename": "InternalError",
+     "evalue": "Blas xGEMV launch failed : a.shape=[1,2,5], b.shape=[1,5,1], m=2, n=1, k=5 [Op:MatMul]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInternalError\u001b[0m                             Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mX\u001b[38;5;241m.\u001b[39mT\u001b[38;5;129m@X\u001b[39m\u001b[38;5;129m@beta\u001b[39m \n\u001b[1;32m      2\u001b[0m loss\n",
+      "File \u001b[0;32m~/anaconda3/envs/stbda2022/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/anaconda3/envs/stbda2022/lib/python3.10/site-packages/tensorflow/python/framework/ops.py:7107\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   7105\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   7106\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 7107\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
+      "\u001b[0;31mInternalError\u001b[0m: Blas xGEMV launch failed : a.shape=[1,2,5], b.shape=[1,5,1], m=2, n=1, k=5 [Op:MatMul]"
+     ]
+    }
+   ],
+   "source": [
+    "loss = -2*X.T @ y + 2*X.T@X@beta \n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "360cb997-e456-47be-893c-e3b729ecd3f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beta = tf.Variable(tnp.array([3.0,3.0]).reshape(2,1))\n",
+    "beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4e8aa92-9d26-4d6e-b725-686ef903a286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = -2*X.T @ y + 2*X.T@X@beta \n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d434cdc-cabd-4fd5-b45f-8dfd8363c29e",
+   "metadata": {},
+   "source": [
+    "(b) $(\\beta_0,\\beta_1)=(3,3)$ 에서 손실함수의 미분계수를 계산하라."
    ]
   },
   {
@@ -151,24 +272,6 @@
    ],
    "source": [
     "tape.gradient(loss, beta)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d434cdc-cabd-4fd5-b45f-8dfd8363c29e",
-   "metadata": {},
-   "source": [
-    "(b) $(\\beta_0,\\beta_1)=(3,3)$ 에서 손실함수의 미분계수를 계산하라."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "id": "360cb997-e456-47be-893c-e3b729ecd3f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "beta = tf.Variable(tnp.array([3.0,3.0]).reshape(2,1))"
    ]
   },
   {
