--- a/_notebooks/2022-04-23-bds-mid-prac.ipynb
+++ b/_notebooks/2022-04-23-bds-mid-prac.ipynb
@@ -1041,7 +1041,7 @@
     "id": "0cb33575-80b3-4d3b-b9fc-a41f27c365db"
    },
    "source": [
-    "`(25)` 파이토치에서 미분을 수행하는 메소드는 backward() 이다. "
+    "`(25)` 파이토치에서 미분을 수행하는 메소드는 backward() 이다. keras는 tf.gradients"
    ]
   },
   {
@@ -1051,6 +1051,32 @@
    "source": [
     "O"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c64a049b-c323-4cb5-9eb6-10af2ecbb870",
+   "metadata": {
+    "id": "9419b5c9-92c2-4c9a-9248-8567c3d9ad83"
+   },
+   "source": [
+    "### `5`. 식 정리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "122cb306-0225-4288-9a0e-4b25368857cb",
+   "metadata": {},
+   "source": [
+    "$$\\hat{\\beta}_0= \\bar{y}-\\hat{\\beta}_1 \\bar{x}$$\n",
+    "\n",
+    "$$\\hat{\\beta}_1= \\frac{S_{xy}}{S_{xx}}=\\frac{\\sum_{i=1}^{n}(x_i-\\bar{x})(y_i-\\bar{y})}{\\sum_{i=1}^{n}(x_i-\\bar{x})^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b26a35-157c-4d0a-914e-d5e6fbc42b71",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1069,7 +1095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
