--- a/_notebooks/2022-04-23-bds-mid-prac.ipynb
+++ b/_notebooks/2022-04-23-bds-mid-prac.ipynb
@@ -1646,6 +1646,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9577ac23-cbf6-446f-91fb-41cc2b282f4e",
+   "metadata": {},
+   "source": [
+    "변수가 Variable로 생성되면 자동적으로 관찰되지만 constant로 생성되면 관찰되지 않으니 보고 싶다면 watch 추가하거나 variable로 생성하면 된다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "b78d306e-22c4-4c23-9bdb-f41a18dad061",
@@ -1712,7 +1720,7 @@
    "id": "d2820c08-698a-4891-ad8c-4db4cf010b68",
    "metadata": {},
    "source": [
-    "> Notice: 시험 예상"
+    "> important: 시험 예상"
    ]
   },
   {
@@ -1796,9 +1804,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbb7e9b1-ac33-43a8-a468-1b3fc8bd5f1a",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "beta = tf.Variable(-10.0)\n",
+    "alpha=0.01/6\n",
+    "opt = tf.keras.optimizers.SGD(alpha)\n",
+    "# tf.keras.optimizers.SGD.apply_gradients 이용\n",
+    "for epoc in range(10000):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        tape.watch(beta)\n",
+    "        loss = (beta/2-1)**2\n",
+    "    slope = tape.gradient(loss,beta)\n",
+    "    opt.apply_gradients([(slope,beta)])\n",
+    "beta\n",
+    "# tf.keras.optimizer.SGD.minimize 이용\n",
+    "loss_fn = lambda: (beta/2-1)**2\n",
+    "for epoc in range(10000):\n",
+    "    opt.minimize(loss_fn,beta)\n",
+    "beta\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8866630b-f3e5-40a7-855e-161ad8dcba8c",
+   "id": "4d6f06d1-b8e0-40fd-87f3-57a5f5c6332f",
    "metadata": {},
    "outputs": [],
    "source": []
