--- a/_notebooks/2022-04-25-bds-mid-prac.ipynb
+++ b/_notebooks/2022-04-25-bds-mid-prac.ipynb
@@ -82,26 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c4b2bc38-fd5f-48b6-a3fd-39ea9a69723e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-23 08:13:19.821724: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-04-23 08:13:20.277096: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22288 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:65:00.0, compute capability: 8.6\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(), dtype=float64, numpy=4.140000000000001>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,10 +951,27 @@
    "cell_type": "markdown",
    "id": "f6956ff8-aea0-43c8-802a-b41f55059f2d",
    "metadata": {
-    "id": "9419b5c9-92c2-4c9a-9248-8567c3d9ad83"
+    "id": "9419b5c9-92c2-4c9a-9248-8567c3d9ad83",
+    "tags": []
    },
    "source": [
     "### `4`. 다음을 잘 읽고 물음에 O/X로 답하라. (25점)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "215a3f7f-aceb-4bff-b08c-4a914c6d0f7f",
+   "metadata": {},
+   "source": [
+    "🤓 질문!\n",
+    "- 확률적 경사하강법 - `batch_size!=N` N 개 중 batch_size 만큼만 \n",
+    "    - 샘플 데이터에 대해서만 경사gradient 계산\n",
+    "    - 최적해에 정확히 도닳하지 못할 가능성\n",
+    "    - 확률적 경사 하강법은 속도가 매우 빠르고 메모리를 적게 먹는다는 장점이 있으나, 경사를 구할 때, 무작위성을 띄므로 지역 최솟값에서 탈출하기 쉬우나, 전역 최솟값에 다다르기 힘들다는 단점 -> 미니 배치 경사 하강법 등장.\n",
+    "- 경사하강법 - `batch_size=N` N 개 중 N개 모두\n",
+    "    - 경사하강법 대상이 배치 크기와 동일\n",
+    "    - 안정적으로 수혐하나 이 때문에 최소해local minimum에 빠지더라도 헤어나오기 힘들다. 즉 local optima 문제가 발생할 가능성이 높다.\n",
+    "    - 학습 데이터셋이 커질수록 시간과 리소스 소모가 지나치게 크다."
    ]
   },
   {
@@ -1309,6 +1317,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ad18982-89ef-4427-94cb-5a2cb4631929",
+   "metadata": {
+    "id": "2d079f11-7721-402b-8671-b4f9d6b1c4cf"
+   },
+   "source": [
+    "`-` 노드수가 많으면 무조건 좋다? $\\to$ 대부분 나쁘지 않음. 그런데 종종 맞추지 말아야할것도 맞춤.. (overfit) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab1bdb82-4c11-4b70-9c71-2c3e3a58d043",
    "metadata": {
     "id": "06b520bc-6a58-4811-9aa3-358d4ec65551"
@@ -1439,6 +1457,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2203f4fb-8c41-45af-b05d-7ad41e774fc3",
+   "metadata": {},
+   "source": [
+    "- 주의점: `opt.apply_gradients()`의 입력으로 pair의 list를 전달해야함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "id": "356218d1-cab2-4861-b06c-de46539d7ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = lambda: (beta/2-1)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e2903f-9cd0-464d-ad19-692a31f22895",
+   "metadata": {},
+   "source": [
+    "lambda; 입력함수\n",
+    "- `lambda x: x**2` <=> `lambda(x) = x^2`\n",
+    "- `lambda x,y: x+y` <=> `lambda(x,y) = x+y`\n",
+    "- `lambda y` <=> `lambda()=y`, 입력이 없으며 출력은 항상 y인 함수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dbb18da5-6a75-4c92-a55b-1df1a1283944",
    "metadata": {
     "id": "77a4415a-b109-4a24-a4df-93165d411d61"
@@ -1512,6 +1559,106 @@
     "`-` 수식화\n",
     "\n",
     "$\\beta_{new} = \\begin{cases} \\beta_{old} + 0.01, & loss'(\\beta_{old}) <0 \\\\ \\beta_{old} - 0.01,& loss'(\\beta_{old})>0 \\end{cases}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f46a6874-a970-4b4d-be91-2f48935ed955",
+   "metadata": {},
+   "source": [
+    "**입력차원input_dim 혹은 input_shape 지정 안 해주면 weights를 불러오지 못함**(6주차)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54bf1f82-4eb8-40da-9c7e-ab1962421f24",
+   "metadata": {},
+   "source": [
+    "optimizer 옵션!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfc69276-1c1d-438e-8476-ddec2af5c532",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "net.compile(optimizer='sgd', loss='mse') \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4ab03b78-d155-4da8-932e-08e48e543316",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.32648369,  1.44695984, -1.98500464,  0.48842733,  0.33159889,\n",
+       "       -0.7165885 , -1.18978377, -1.36872158, -0.21278961,  0.30669656])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randn(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bace8f06-8a8a-4a71-b237-05bc72ab21ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.82803225, -0.59251622,  0.45056171,  0.28124619, -0.23789187,\n",
+       "       -0.77473255, -0.00237442,  0.18943517, -0.04873515,  0.06428119])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randn(10)*0.5 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57ba6126-5cba-44cf-92ee-e817b6abebc0",
+   "metadata": {},
+   "source": [
+    "**총 차원은 유지되면서 두 번째 차원 변경 concatenate**(6주차)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ab76653a-36ce-4268-916b-4923d36acc69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 5],\n",
+       "       [3, 4, 6]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((np.array([[1, 2], [3, 4]]),np.array([[5, 6]]).T),axis=1)"
    ]
   },
   {
@@ -1885,6 +2032,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6db4d4e5-b145-4b33-bc4b-3e177ae84aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.random.set_seed(43052)\n",
+    "net = tf.keras.Sequential() \n",
+    "net.add(tf.keras.layers.Dense(1,activation='sigmoid'))\n",
+    "bceloss_fn = lambda y,yhat: -tf.reduce_mean(y*tnp.log(yhat) + (1-y)*tnp.log(1-yhat))\n",
+    "net.compile(loss=bceloss_fn, optimizer=tf.optimizers.SGD(0.1))\n",
+    "net.fit(x,y,epochs=1000,verbose=0,batch_size=N) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1779a615-7443-490d-95a6-ca47b8de9deb",
    "metadata": {},
    "outputs": [],
    "source": []
