--- a/_notebooks/2022-01-19-bd-mid.ipynb
+++ b/_notebooks/2022-01-19-bd-mid.ipynb
@@ -1618,7 +1618,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1632,7 +1632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
