--- a/_notebooks/2022-04-25-bds-mid-prac.ipynb
+++ b/_notebooks/2022-04-25-bds-mid-prac.ipynb
@@ -948,6 +948,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a0cbd72-2635-491a-a3e4-2fd26e89b886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = tf.keras.Sequential()\n",
+    "layer = tf.keras.layers.Dense(1,use_bias=False,input_dim=2) \n",
+    "ner.set_weights([np.array([[-5.0],[10.0]],dtype=np.float32)])\n",
+    "net.compile(optimizer = tf.keras.optimizers.SGD(0.1),loss='mse')\n",
+    "net.fit(X,y,rpochs=1000,verbose=0,batchsize=200)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f6956ff8-aea0-43c8-802a-b41f55059f2d",
    "metadata": {
