--- a/_notebooks/2022-04-28-bds-중간고사_해설.ipynb
+++ b/_notebooks/2022-04-28-bds-중간고사_해설.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "a05d1125-708a-4485-92a7-75d22b4a90fc",
    "metadata": {
     "id": "a05d1125-708a-4485-92a7-75d22b4a90fc"
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "eabac705-2792-40cd-9aef-c395ad3c0bb8",
    "metadata": {
     "id": "eabac705-2792-40cd-9aef-c395ad3c0bb8",
@@ -589,6 +589,14 @@
     "y= tnp.array([55.4183651 , 58.19427589, 61.23082496, 62.31255873, 63.1070028 , \n",
     "              63.69569103, 67.24704918, 71.43650092, 73.10130336, 77.84988286]).reshape(10,1)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe6f678b-8d2f-4b95-a3d4-b38ada920de1",
+   "metadata": {},
+   "source": [
+    "**곡선이 완만하게 convex해서 조금만 기울기 크게 만들면 터져버려 실현시키기 어려운 모형이다.**"
    ]
   },
   {
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "1e44e475-0e21-496d-aa35-46f6e2d98780",
    "metadata": {
     "id": "1e44e475-0e21-496d-aa35-46f6e2d98780"
@@ -750,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "id": "5e858e5b-5722-433a-a8df-cd6d7f1972e5",
    "metadata": {
     "id": "5e858e5b-5722-433a-a8df-cd6d7f1972e5",
@@ -765,7 +773,7 @@
        "       [2.24168098]])>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
