--- a/_notebooks/2022-05-13-as-hw.ipynb
+++ b/_notebooks/2022-05-13-as-hw.ipynb
@@ -20,20 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "56f0c09b-5ac2-4487-a8cd-0c358688f4d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
-    "options(jupyter.plot_scale=4)\n",
-    "options(repr.plot.width=8,repr.plot.height=6,repr.plot.res=300)\n",
-    "#options(jupyter.rich_display=FALSE)\n",
-    "#options(max.print=1000)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "523b9ded-5195-40f5-b055-5508851aa981",
    "metadata": {},
@@ -64,216 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8f64ee8d-0948-46ff-9188-59053b7a2273",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 1\n",
-      "[1] 2\n",
-      "[1] 3\n",
-      "[1] 4\n",
-      "[1] 5\n",
-      "[1] 6\n",
-      "[1] 7\n",
-      "[1] 8\n",
-      "[1] 9\n",
-      "[1] 10\n",
-      "[1] 11\n",
-      "[1] 12\n",
-      "[1] 13\n",
-      "[1] 14\n",
-      "[1] 15\n",
-      "[1] 16\n",
-      "[1] 17\n",
-      "[1] 18\n",
-      "[1] 19\n",
-      "[1] 20\n",
-      "[1] 21\n",
-      "[1] 22\n",
-      "[1] 23\n",
-      "[1] 24\n",
-      "[1] 25\n",
-      "[1] 26\n",
-      "[1] 27\n",
-      "[1] 28\n",
-      "[1] 29\n",
-      "[1] 30\n",
-      "[1] 31\n",
-      "[1] 32\n",
-      "[1] 33\n",
-      "[1] 34\n",
-      "[1] 35\n",
-      "[1] 36\n",
-      "[1] 37\n",
-      "[1] 38\n",
-      "[1] 39\n",
-      "[1] 40\n",
-      "[1] 41\n",
-      "[1] 42\n",
-      "[1] 43\n",
-      "[1] 44\n",
-      "[1] 45\n",
-      "[1] 46\n",
-      "[1] 47\n",
-      "[1] 48\n",
-      "[1] 49\n",
-      "[1] 50\n",
-      "[1] 51\n",
-      "[1] 52\n",
-      "[1] 53\n",
-      "[1] 54\n",
-      "[1] 55\n",
-      "[1] 56\n",
-      "[1] 57\n",
-      "[1] 58\n",
-      "[1] 59\n",
-      "[1] 60\n",
-      "[1] 61\n",
-      "[1] 62\n",
-      "[1] 63\n",
-      "[1] 64\n",
-      "[1] 65\n",
-      "[1] 66\n",
-      "[1] 67\n",
-      "[1] 68\n",
-      "[1] 69\n",
-      "[1] 70\n",
-      "[1] 71\n",
-      "[1] 72\n",
-      "[1] 73\n",
-      "[1] 74\n",
-      "[1] 75\n",
-      "[1] 76\n",
-      "[1] 77\n",
-      "[1] 78\n",
-      "[1] 79\n",
-      "[1] 80\n",
-      "[1] 81\n",
-      "[1] 82\n",
-      "[1] 83\n",
-      "[1] 84\n",
-      "[1] 85\n",
-      "[1] 86\n",
-      "[1] 87\n",
-      "[1] 88\n",
-      "[1] 89\n",
-      "[1] 90\n",
-      "[1] 91\n",
-      "[1] 92\n",
-      "[1] 93\n",
-      "[1] 94\n",
-      "[1] 95\n",
-      "[1] 96\n",
-      "[1] 97\n",
-      "[1] 98\n",
-      "[1] 99\n",
-      "[1] 100\n",
-      "[1] 101\n",
-      "[1] 102\n",
-      "[1] 103\n",
-      "[1] 104\n",
-      "[1] 105\n",
-      "[1] 106\n",
-      "[1] 107\n",
-      "[1] 108\n",
-      "[1] 109\n",
-      "[1] 110\n",
-      "[1] 111\n",
-      "[1] 112\n",
-      "[1] 113\n",
-      "[1] 114\n",
-      "[1] 115\n",
-      "[1] 116\n",
-      "[1] 117\n",
-      "[1] 118\n",
-      "[1] 119\n",
-      "[1] 120\n",
-      "[1] 121\n",
-      "[1] 122\n",
-      "[1] 123\n",
-      "[1] 124\n",
-      "[1] 125\n",
-      "[1] 126\n",
-      "[1] 127\n",
-      "[1] 128\n",
-      "[1] 129\n",
-      "[1] 130\n",
-      "[1] 131\n",
-      "[1] 132\n",
-      "[1] 133\n",
-      "[1] 134\n",
-      "[1] 135\n",
-      "[1] 136\n",
-      "[1] 137\n",
-      "[1] 138\n",
-      "[1] 139\n",
-      "[1] 140\n",
-      "[1] 141\n",
-      "[1] 142\n",
-      "[1] 143\n",
-      "[1] 144\n",
-      "[1] 145\n",
-      "[1] 146\n",
-      "[1] 147\n",
-      "[1] 148\n",
-      "[1] 149\n",
-      "[1] 150\n",
-      "[1] 151\n",
-      "[1] 152\n",
-      "[1] 153\n",
-      "[1] 154\n",
-      "[1] 155\n",
-      "[1] 156\n",
-      "[1] 157\n",
-      "[1] 158\n",
-      "[1] 159\n",
-      "[1] 160\n",
-      "[1] 161\n",
-      "[1] 162\n",
-      "[1] 163\n",
-      "[1] 164\n",
-      "[1] 165\n",
-      "[1] 166\n",
-      "[1] 167\n",
-      "[1] 168\n",
-      "[1] 169\n",
-      "[1] 170\n",
-      "[1] 171\n",
-      "[1] 172\n",
-      "[1] 173\n",
-      "[1] 174\n",
-      "[1] 175\n",
-      "[1] 176\n",
-      "[1] 177\n",
-      "[1] 178\n",
-      "[1] 179\n",
-      "[1] 180\n",
-      "[1] 181\n",
-      "[1] 182\n",
-      "[1] 183\n",
-      "[1] 184\n",
-      "[1] 185\n",
-      "[1] 186\n",
-      "[1] 187\n",
-      "[1] 188\n",
-      "[1] 189\n",
-      "[1] 190\n",
-      "[1] 191\n",
-      "[1] 192\n",
-      "[1] 193\n",
-      "[1] 194\n",
-      "[1] 195\n",
-      "[1] 196\n",
-      "[1] 197\n",
-      "[1] 198\n",
-      "[1] 199\n",
-      "[1] 200\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -282,22 +62,22 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>55.209312946869</li><li>55.2064362070706</li></ol>\n"
+       "<ol class=list-inline><li>55.1327101053596</li><li>55.1308698035524</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 55.209312946869\n",
-       "\\item 55.2064362070706\n",
+       "\\item 55.1327101053596\n",
+       "\\item 55.1308698035524\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 55.209312946869\n",
-       "2. 55.2064362070706\n",
+       "1. 55.1327101053596\n",
+       "2. 55.1308698035524\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 55.20931 55.20644"
+       "[1] 55.13271 55.13087"
       ]
      },
      "metadata": {},
@@ -311,22 +91,22 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>17.8499689055568</li><li>1.00283301605424</li></ol>\n"
+       "<ol class=list-inline><li>15.5428446077113</li><li>1.001849737575</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 17.8499689055568\n",
-       "\\item 1.00283301605424\n",
+       "\\item 15.5428446077113\n",
+       "\\item 1.001849737575\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 17.8499689055568\n",
-       "2. 1.00283301605424\n",
+       "1. 15.5428446077113\n",
+       "2. 1.001849737575\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 17.849969  1.002833"
+       "[1] 15.54284  1.00185"
       ]
      },
      "metadata": {},
@@ -366,7 +146,7 @@
     "te1[k] = mean((test_y - predict(fit1,newdata=data.frame(test_x1,test_x2)))^2)\n",
     "te2[k] = mean((test_y - predict(fit2,newdata=data.frame(test_x1)))^2)\n",
     "#summary(lm(y~x1+x2))\n",
-    "print(k)\n",
+    "#print(k)\n",
     "}\n",
     "\n",
     "c(mean(te1),mean(te2))\n",
