--- a/_notebooks/2022-05-12-as-모형진단.ipynb
+++ b/_notebooks/2022-05-12-as-모형진단.ipynb
@@ -1995,54 +1995,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "cb948650-52a5-462e-ad53-ca2e6e043ac9",
+   "execution_count": 60,
+   "id": "8fb85358-e98f-47c2-90a7-8b599d9df423",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/home/csy/R/x86_64-pc-linux-gnu-library/4.1’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "also installing the dependencies ‘glmnet’, ‘grpreg’, ‘bestglm’, ‘leaps’, ‘VGAM’, ‘randomForest’\n",
-      "\n",
-      "\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘glmnet’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘grpreg’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘leaps’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘VGAM’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘randomForest’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘bestglm’ had non-zero exit status”\n",
-      "Warning message in install.packages(\"regclass\"):\n",
-      "“installation of package ‘regclass’ had non-zero exit status”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "install.packages(\"regclass\")"
+    "library(regclass)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "id": "56830259-ba7a-406c-90a2-897fb426d497",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in VIF(lmod): could not find function \"VIF\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in VIF(lmod): could not find function \"VIF\"\nTraceback:\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>Age</dt><dd>1.99793147706428</dd><dt>Weight</dt><dd>3.64703012881261</dd><dt>HtShoes</dt><dd>307.429378016748</dd><dt>Ht</dt><dd>333.137832387502</dd><dt>Seated</dt><dd>8.95105380157001</dd><dt>Arm</dt><dd>4.49636844261039</dd><dt>Thigh</dt><dd>2.76288552162396</dd><dt>Leg</dt><dd>6.69429122446876</dd></dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[Age] 1.99793147706428\n",
+       "\\item[Weight] 3.64703012881261\n",
+       "\\item[HtShoes] 307.429378016748\n",
+       "\\item[Ht] 333.137832387502\n",
+       "\\item[Seated] 8.95105380157001\n",
+       "\\item[Arm] 4.49636844261039\n",
+       "\\item[Thigh] 2.76288552162396\n",
+       "\\item[Leg] 6.69429122446876\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "Age\n",
+       ":   1.99793147706428Weight\n",
+       ":   3.64703012881261HtShoes\n",
+       ":   307.429378016748Ht\n",
+       ":   333.137832387502Seated\n",
+       ":   8.95105380157001Arm\n",
+       ":   4.49636844261039Thigh\n",
+       ":   2.76288552162396Leg\n",
+       ":   6.69429122446876\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       Age     Weight    HtShoes         Ht     Seated        Arm      Thigh \n",
+       "  1.997931   3.647030 307.429378 333.137832   8.951054   4.496368   2.762886 \n",
+       "       Leg \n",
+       "  6.694291 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
